--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:controller="sample.Controller" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="403.0"
-          prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="403.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
 
     <stylesheets>
         <URL value="@sample.css">
@@ -22,85 +21,82 @@
 
 
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="293.0" minWidth="15.0" prefWidth="15.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="313.0" minWidth="10.0" prefWidth="177.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="100.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="25.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="163.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="0.0" prefWidth="16.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="114.0"/>
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="15.0" prefWidth="15.0"/>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="293.0" minWidth="15.0" prefWidth="15.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="313.0" minWidth="10.0" prefWidth="177.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="25.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="163.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="0.0" prefWidth="16.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="114.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="15.0" prefWidth="15.0" />
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints maxHeight="32.0" minHeight="15.0" prefHeight="15.0" vgrow="SOMETIMES"/>
-        <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES"/>
-        <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints maxHeight="30.0" minHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES"/>
-        <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="22.0" vgrow="SOMETIMES"/>
-        <RowConstraints maxHeight="31.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES"/>
-        <RowConstraints maxHeight="27.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints maxHeight="58.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        <RowConstraints maxHeight="25.0" minHeight="25.0" prefHeight="20.0" vgrow="SOMETIMES"/>
+        <RowConstraints maxHeight="32.0" minHeight="15.0" prefHeight="15.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="30.0" minHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="22.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="31.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="27.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="58.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="25.0" minHeight="25.0" prefHeight="20.0" vgrow="SOMETIMES" />
     </rowConstraints>
-    <Pane prefHeight="381.0" prefWidth="21.0" GridPane.rowIndex="3"/>
-    <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5"/>
-    <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="7"/>
+    <Pane prefHeight="381.0" prefWidth="21.0" GridPane.rowIndex="3" />
+    <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5" />
+    <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="7" />
     <Label text="Osnovni lični podaci" GridPane.columnIndex="1" GridPane.rowIndex="1">
         <font>
-          <Font name="System Bold" size="14.0"/>
+          <Font name="System Bold" size="14.0" />
         </font>
     </Label>
-    <Label text="Ime" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-    <Label text="Prezime" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
-    <Label text="Broj Indeksa" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
-    <Label prefHeight="21.0" prefWidth="158.0" text="Detaljni lični podaci" GridPane.columnIndex="4"
-           GridPane.rowIndex="1">
+    <Label text="Ime" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+    <Label text="Prezime" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+    <Label text="Broj Indeksa" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+    <Label prefHeight="21.0" prefWidth="158.0" text="Detaljni lični podaci" GridPane.columnIndex="4" GridPane.rowIndex="1">
         <font>
-          <Font name="System Bold" size="14.0"/>
+          <Font name="System Bold" size="14.0" />
         </font>
     </Label>
-    <Label text="JMBG" GridPane.columnIndex="4" GridPane.rowIndex="7"/>
-    <Label text="Datum rođenja" GridPane.columnIndex="4" GridPane.rowIndex="3"/>
-    <Label text="Mjesto rođenja" GridPane.columnIndex="4" GridPane.rowIndex="5"/>
+    <Label text="JMBG" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+    <Label text="Datum rođenja" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+    <Label text="Mjesto rođenja" GridPane.columnIndex="4" GridPane.rowIndex="5" />
     <Label text="Kontakt podaci" GridPane.columnIndex="1" GridPane.rowIndex="9">
         <font>
-          <Font name="System Bold" size="14.0"/>
+          <Font name="System Bold" size="14.0" />
         </font>
     </Label>
     <Label text="Podaci o studiju" GridPane.columnIndex="4" GridPane.rowIndex="9">
         <font>
-          <Font name="System Bold" size="14.0"/>
+          <Font name="System Bold" size="14.0" />
         </font>
     </Label>
-    <Label text="Adresa" GridPane.columnIndex="1" GridPane.rowIndex="11"/>
-    <Label text="Telefon" GridPane.columnIndex="1" GridPane.rowIndex="13"/>
-    <Label text="E-mail" GridPane.columnIndex="1" GridPane.rowIndex="15"/>
-    <TextField fx:id="ime" styleClass="nevalidno" onKeyTyped="#dodajIme" GridPane.columnIndex="2"
-               GridPane.rowIndex="3"/>
-    <TextField fx:id="prezime" GridPane.columnIndex="2" GridPane.rowIndex="5"/>
-    <TextField fx:id="brIndeksa" GridPane.columnIndex="2" GridPane.rowIndex="7"/>
-    <TextField fx:id="mjesto" GridPane.columnIndex="6" GridPane.rowIndex="5"/>
-    <TextField fx:id="jmbg" GridPane.columnIndex="6" GridPane.rowIndex="7"/>
-    <TextField fx:id="adresa" GridPane.columnIndex="2" GridPane.rowIndex="11"/>
-    <TextField fx:id="telefon" GridPane.columnIndex="2" GridPane.rowIndex="13"/>
-    <TextField fx:id="email" GridPane.columnIndex="2" GridPane.rowIndex="15"/>
-    <ComboBox fx:id="odsjek" prefWidth="150.0" promptText="Odsjek" GridPane.columnIndex="4" GridPane.rowIndex="11"/>
+    <Label text="Adresa" GridPane.columnIndex="1" GridPane.rowIndex="11" />
+    <Label text="Telefon" GridPane.columnIndex="1" GridPane.rowIndex="13" />
+    <Label text="E-mail" GridPane.columnIndex="1" GridPane.rowIndex="15" />
+    <TextField fx:id="ime" onKeyTyped="#dodajIme" styleClass="nevalidno" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+    <TextField fx:id="prezime" onKeyTyped="#dodajPrezime"  styleClass="nevalidno" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+    <TextField fx:id="brIndeksa" GridPane.columnIndex="2" styleClass="nevalidno"  GridPane.rowIndex="7" />
+    <TextField fx:id="mjesto" GridPane.columnIndex="6"  styleClass="nevalidno" GridPane.rowIndex="5" />
+    <TextField fx:id="jmbg" GridPane.columnIndex="6"  styleClass="nevalidno"  GridPane.rowIndex="7" />
+    <TextField fx:id="adresa" GridPane.columnIndex="2"  styleClass="nevalidno" GridPane.rowIndex="11" />
+    <TextField fx:id="telefon" GridPane.columnIndex="2" styleClass="nevalidno"  GridPane.rowIndex="13" />
+    <TextField fx:id="email" GridPane.columnIndex="2" styleClass="nevalidno"  GridPane.rowIndex="15" />
+    <ComboBox fx:id="odsjek" prefWidth="150.0" promptText="Odsjek" GridPane.columnIndex="4" GridPane.rowIndex="11" />
 
-    <ComboBox fx:id="godina" prefWidth="150.0" promptText="Godina" GridPane.columnIndex="4" GridPane.rowIndex="13"/>
-    <ComboBox fx:id="ciklus" prefWidth="150.0" promptText="Ciklus" GridPane.columnIndex="4" GridPane.rowIndex="15"/>
-    <ComboBox fx:id="status" prefWidth="150.0" promptText="Status" GridPane.columnIndex="6" GridPane.rowIndex="11"/>
-    <ComboBox fx:id="borci" prefWidth="150.0" promptText="Borci" GridPane.columnIndex="6" GridPane.rowIndex="13"/>
-    <Button fx:id="potvrdi" mnemonicParsing="false" prefHeight="31.0" prefWidth="129.0" text="Potvrdi"
-            GridPane.columnIndex="6" GridPane.rowIndex="17"/>
-    <DatePicker fx:id="date" GridPane.columnIndex="6" GridPane.rowIndex="3"/>
+    <ComboBox fx:id="godina" prefWidth="150.0" promptText="Godina" GridPane.columnIndex="4" GridPane.rowIndex="13" />
+    <ComboBox fx:id="ciklus" prefWidth="150.0" promptText="Ciklus" GridPane.columnIndex="4" GridPane.rowIndex="15" />
+    <ComboBox fx:id="status" prefWidth="150.0" promptText="Status" GridPane.columnIndex="6" GridPane.rowIndex="11" />
+    <ComboBox fx:id="borci" prefWidth="150.0" promptText="Borci" GridPane.columnIndex="6" GridPane.rowIndex="13" />
+    <Button fx:id="potvrdi" mnemonicParsing="false" prefHeight="31.0" prefWidth="129.0" text="Potvrdi" GridPane.columnIndex="6" GridPane.rowIndex="17" />
+    <DatePicker fx:id="date" GridPane.columnIndex="6" GridPane.rowIndex="3" />
 </GridPane>
