--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -10,81 +12,91 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="403.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="293.0" minWidth="15.0" prefWidth="15.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="313.0" minWidth="10.0" prefWidth="158.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="145.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="44.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="145.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="25.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="137.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="15.0" prefWidth="15.0" />
-  </columnConstraints>
-  <rowConstraints>
-      <RowConstraints maxHeight="32.0" minHeight="15.0" prefHeight="15.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="30.0" minHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="22.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="31.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="27.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="58.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="25.0" minHeight="25.0" prefHeight="20.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <children>
-      <Pane prefHeight="381.0" prefWidth="21.0" GridPane.rowIndex="3" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="7" />
-      <Label text="Osnovni lični podaci" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <font>
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="403.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+
+    <stylesheets>
+        <URL value="@sample.css">
+        </URL>
+    </stylesheets>
+
+
+    <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="293.0" minWidth="15.0" prefWidth="15.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="313.0" minWidth="10.0" prefWidth="177.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="100.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="25.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="163.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="0.0" prefWidth="16.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="10.0" prefWidth="114.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.0" minWidth="15.0" prefWidth="15.0" />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints maxHeight="32.0" minHeight="15.0" prefHeight="15.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="30.0" minHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="20.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="22.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="31.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="27.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="58.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="25.0" minHeight="25.0" prefHeight="20.0" vgrow="SOMETIMES" />
+    </rowConstraints>
+    <Pane prefHeight="381.0" prefWidth="21.0" GridPane.rowIndex="3" />
+    <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5" />
+    <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="7" />
+    <Label text="Osnovni lični podaci" GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <font>
             <Font name="System Bold" size="14.0" />
-         </font></Label>
-      <Label text="Ime" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <Label text="Prezime" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <Label text="Broj Indeksa" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-      <Label prefHeight="21.0" prefWidth="139.0" text="Detaljni lični podaci" GridPane.columnIndex="4" GridPane.rowIndex="1">
-         <font>
+        </font>
+    </Label>
+    <Label text="Ime" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+    <Label text="Prezime" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+    <Label text="Broj Indeksa" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+    <Label prefHeight="21.0" prefWidth="158.0" text="Detaljni lični podaci" GridPane.columnIndex="4" GridPane.rowIndex="1">
+        <font>
             <Font name="System Bold" size="14.0" />
-         </font></Label>
-      <Label text="JMBG" GridPane.columnIndex="4" GridPane.rowIndex="7" />
-      <Label text="Datum rođenja" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-      <Label text="Mjesto rođenja" GridPane.columnIndex="4" GridPane.rowIndex="5" />
-      <Label text="Kontakt podaci" GridPane.columnIndex="1" GridPane.rowIndex="9">
-         <font>
+        </font>
+    </Label>
+    <Label text="JMBG" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+    <Label text="Datum rođenja" GridPane.columnIndex="4" GridPane.rowIndex="3" />
+    <Label text="Mjesto rođenja" GridPane.columnIndex="4" GridPane.rowIndex="5" />
+    <Label text="Kontakt podaci" GridPane.columnIndex="1" GridPane.rowIndex="9">
+        <font>
             <Font name="System Bold" size="14.0" />
-         </font></Label>
-      <Label text="Podaci o studiju" GridPane.columnIndex="4" GridPane.rowIndex="9">
-         <font>
+        </font>
+    </Label>
+    <Label text="Podaci o studiju" GridPane.columnIndex="4" GridPane.rowIndex="9">
+        <font>
             <Font name="System Bold" size="14.0" />
-         </font></Label>
-      <Label text="Adresa" GridPane.columnIndex="1" GridPane.rowIndex="11" />
-      <Label text="Telefon" GridPane.columnIndex="1" GridPane.rowIndex="13" />
-      <Label text="E-mail" GridPane.columnIndex="1" GridPane.rowIndex="15" />
-      <TextField fx:id="ime"  GridPane.columnIndex="2" GridPane.rowIndex="3" />
-      <TextField fx:id="prezime"  GridPane.columnIndex="2" GridPane.rowIndex="5" />
-      <TextField fx:id="brIndeksa" GridPane.columnIndex="2" GridPane.rowIndex="7" />
-      <TextField fx:id="datum" GridPane.columnIndex="6" GridPane.rowIndex="3" />
-      <TextField fx:id="mjesto" GridPane.columnIndex="6" GridPane.rowIndex="5" />
-      <TextField fx:id="jmbg" GridPane.columnIndex="6" GridPane.rowIndex="7" />
-      <TextField fx:id="adresa" GridPane.columnIndex="2" GridPane.rowIndex="11" />
-      <TextField fx:id="telefon" GridPane.columnIndex="2" GridPane.rowIndex="13" />
-      <TextField fx:id="email" GridPane.columnIndex="2" GridPane.rowIndex="15" />
-      <ComboBox fx:id="odsjek" prefWidth="150.0" promptText="Odsjek" GridPane.columnIndex="4" GridPane.rowIndex="11" />
-      <ComboBox fx:id="godina" prefWidth="150.0" promptText="Godina" GridPane.columnIndex="4" GridPane.rowIndex="13" />
-      <ComboBox fx:id="ciklus" prefWidth="150.0" promptText="Ciklus" GridPane.columnIndex="4" GridPane.rowIndex="15" />
-      <ComboBox fx:id="status" prefWidth="150.0" promptText="Status" GridPane.columnIndex="6" GridPane.rowIndex="11" />
-      <ComboBox fx:id="borci" prefWidth="150.0" promptText="Borci" GridPane.columnIndex="6" GridPane.rowIndex="13" />
-      <Button fx:id="potvrdi" mnemonicParsing="false" prefHeight="31.0" prefWidth="129.0" text="Potvrdi" GridPane.columnIndex="6" GridPane.rowIndex="17" />
-   </children>
+        </font>
+    </Label>
+    <Label text="Adresa" GridPane.columnIndex="1" GridPane.rowIndex="11" />
+    <Label text="Telefon" GridPane.columnIndex="1" GridPane.rowIndex="13" />
+    <Label text="E-mail" GridPane.columnIndex="1" GridPane.rowIndex="15" />
+    <TextField fx:id="ime" onKeyTyped="#dodajIme" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+    <TextField fx:id="prezime" onKeyTyped="#dodajPrezime" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+    <TextField fx:id="brIndeksa" onKeyTyped="#dodajBrIndeksa" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+    <TextField fx:id="mjesto" onKeyTyped="#dodajMjesto" GridPane.columnIndex="6" GridPane.rowIndex="5" />
+    <TextField fx:id="jmbg" onKeyTyped="#dodajJMBG" GridPane.columnIndex="6" GridPane.rowIndex="7" />
+    <TextField fx:id="adresa" onKeyTyped="#dodajAdresu" GridPane.columnIndex="2" GridPane.rowIndex="11" />
+    <TextField fx:id="telefon" onKeyTyped="#dodajTelefon" GridPane.columnIndex="2" GridPane.rowIndex="13" />
+    <TextField fx:id="email" onKeyTyped="#dodajEmail" GridPane.columnIndex="2" GridPane.rowIndex="15" />
+    <ComboBox fx:id="odsjek" onMouseEntered="#dodajOdsjek" prefWidth="150.0" promptText="Odsjek" GridPane.columnIndex="4" GridPane.rowIndex="11" />
+
+    <ComboBox fx:id="godina" onMouseEntered="#dodajGodinu" prefWidth="150.0" promptText="Godina" GridPane.columnIndex="4" GridPane.rowIndex="13" />
+    <ComboBox fx:id="ciklus" onMouseEntered="#dodajCiklus" prefWidth="150.0" promptText="Ciklus" GridPane.columnIndex="4" GridPane.rowIndex="15" />
+    <ComboBox fx:id="status" onMouseEntered="#dodajStatus" prefWidth="150.0" promptText="Status" GridPane.columnIndex="6" GridPane.rowIndex="11" />
+    <ComboBox fx:id="borci" onMouseEntered="#dodajBorci" prefWidth="150.0" promptText="Borci" GridPane.columnIndex="6" GridPane.rowIndex="13" />
+    <Button fx:id="potvrdi" mnemonicParsing="false" onAction="#Potvrdi" prefHeight="31.0" prefWidth="129.0" text="Potvrdi" GridPane.columnIndex="6" GridPane.rowIndex="17" />
+    <DatePicker fx:id="date" GridPane.columnIndex="6" GridPane.rowIndex="3" />
 </GridPane>
